--- a/pom.xml
+++ b/pom.xml
@@ -26,15 +26,15 @@
 	
 	<properties>
 		<jeaf.x-fun.api.version>1.6.12</jeaf.x-fun.api.version>
-		<jeaf.x-fun.impl.version>1.6.18</jeaf.x-fun.impl.version>
-		<jeaf.tools.api.version>1.6.14</jeaf.tools.api.version>
-		<jeaf.core.api.version>1.6.14</jeaf.core.api.version>
-		<jeaf.core.impl.version>1.6.16</jeaf.core.impl.version>
-		<jeaf.persistence.api.version>1.6.11</jeaf.persistence.api.version>
-		<jeaf.junit.extensions.version>1.6.11</jeaf.junit.extensions.version>
-		<jeaf.workload.api.version>1.6.13</jeaf.workload.api.version>
-		<jeaf.json.api.version>1.6.6</jeaf.json.api.version>
-		<jeaf.json.impl.version>1.6.7</jeaf.json.impl.version>
+		<jeaf.x-fun.impl.version>1.6.19-SNAPSHOT</jeaf.x-fun.impl.version>
+		<jeaf.tools.api.version>1.6.15-SNAPSHOT</jeaf.tools.api.version>
+		<jeaf.core.api.version>1.6.15-SNAPSHOT</jeaf.core.api.version>
+		<jeaf.core.impl.version>1.6.17-SNAPSHOT</jeaf.core.impl.version>
+		<jeaf.persistence.api.version>1.6.12-SNAPSHOT</jeaf.persistence.api.version>
+		<jeaf.junit.extensions.version>1.6.12-SNAPSHOT</jeaf.junit.extensions.version>
+		<jeaf.workload.api.version>1.6.14-SNAPSHOT</jeaf.workload.api.version>
+		<jeaf.json.api.version>1.6.7-SNAPSHOT</jeaf.json.api.version>
+		<jeaf.json.impl.version>1.6.8-SNAPSHOT</jeaf.json.impl.version>
 		<jeaf.test.model.version>1.0.24-SNAPSHOT</jeaf.test.model.version>
 		
 		<jackson.version>2.13.1</jackson.version>
