--- a/jeaf-generator-test-message-constants/pom.xml
+++ b/jeaf-generator-test-message-constants/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.anaptecs.jeaf.generator</groupId>
 		<artifactId>jeaf-generator-project</artifactId>
-		<version>1.6.24</version>
+		<version>1.6.25-SNAPSHOT</version>
 	</parent>
 
 	<name>JEAF Generator Test Message Constants</name>
