Added extensible enum to model

--- a/jeaf-generator-test-open-api/src-gen/main/resources/base/product-base.yml
+++ b/jeaf-generator-test-open-api/src-gen/main/resources/base/product-base.yml
@@ -13,10 +13,11 @@ info:
     name: JEAF Development Team
     url: 'https://www.anaptecs.de/jeaf'
     email: jeaf@anaptecs.de
+  
   license:
     name: Apache 2.0
     url: 'https://www.apache.org/licenses/LICENSE-2.0.html'
-    
+      
 paths:
   # OpenAPI standard requires to define at least 1 operation. This API however seems to be a pure type definition. 
   # So we define NOP operation here as workaround.
@@ -975,4 +976,12 @@ components:
         - ONE
         - TWO
         - THREE
+
+    # com.anaptecs.jeaf.junit.openapi.base.ExtensibleEnum
+    ExtensibleEnum:
+      type: string
+      enum:
+        - RED
+        - GREEN
+        - BLUE
 
