Added support for extensible enums

--- a/jeaf-generator-test-open-api/src-gen/main/resources/base/product-base.yml
+++ b/jeaf-generator-test-open-api/src-gen/main/resources/base/product-base.yml
@@ -980,7 +980,7 @@ components:
     # com.anaptecs.jeaf.junit.openapi.base.ExtensibleEnum
     ExtensibleEnum:
       type: string
-      enum:
+      x-extensible-enum:
         - RED
         - GREEN
         - BLUE
