Fixed bug regarding required arrays

--- a/jeaf-generator-test-custom-extension-usage/src-gen/main/resources/base/product-base.yml
+++ b/jeaf-generator-test-custom-extension-usage/src-gen/main/resources/base/product-base.yml
@@ -386,6 +386,11 @@ components:
           type: array
           items:
             type: string
+        cStringArray: 
+          type: array
+          items:
+            type: string
+          minItems: 1
       required:
         - aBooleanArray
         - cBooleanArray
@@ -396,6 +401,7 @@ components:
         - aCharacterArray
         - aFloatArray
         - aDoubleArray
+        - cStringArray
     # com.anaptecs.jeaf.junit.openapi.base.ParentClass
     ParentClass:
       discriminator:
