--- a/jeaf-generator-test-pojos/pom.xml
+++ b/jeaf-generator-test-pojos/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.anaptecs.jeaf.generator</groupId>
 		<artifactId>jeaf-generator-project</artifactId>
-		<version>1.6.25</version>
+		<version>1.6.26-SNAPSHOT</version>
 	</parent>
 
 	<name>JEAF Generator Test POJOs</name>
