--- a/jeaf-generator-test-open-api-service-objects/pom.xml
+++ b/jeaf-generator-test-open-api-service-objects/pom.xml
@@ -115,6 +115,8 @@
 					<enableSemVerForJSON>false</enableSemVerForJSON>
 					<generateConstantsForAttributeNames>false</generateConstantsForAttributeNames>
 					<generateJSONSerializers>true</generateJSONSerializers>
+					<generateValidationAnnotationsForAssociationsFromMultiplicity>true</generateValidationAnnotationsForAssociationsFromMultiplicity>
+					<generateValidationAnnotationsForAttributesFromMultiplicity>true</generateValidationAnnotationsForAttributesFromMultiplicity>
 
 					<!-- Define information that are written to file headers -->
 					<fileHeaderCompany>anaptecs GmbH, Ricarda-Huch-Str. 71, 72760 Reutlingen, Germany</fileHeaderCompany>
