Improved order of OpenAPIType definition

--- a/jeaf-generator-test-open-api/src-gen/main/resources/products/product-services.yml
+++ b/jeaf-generator-test-open-api/src-gen/main/resources/products/product-services.yml
@@ -609,6 +609,7 @@ components:
     # com.anaptecs.jeaf.junit.openapi.service1.Sale
     Sale:
       type: object
+      additionalProperties: false
       properties:
         transactionAmount: 
           type: number
