--- a/jeaf-generator-test-open-api/src-gen/main/resources/base/product-base.yml
+++ b/jeaf-generator-test-open-api/src-gen/main/resources/base/product-base.yml
@@ -65,6 +65,7 @@ components:
     # com.anaptecs.jeaf.junit.openapi.base.BidirectA
     BidirectA:
       type: object
+      additionalProperties: false
       properties:
         parent: 
           $ref: '#/components/schemas/BidirectA'
@@ -73,6 +74,7 @@ components:
     # com.anaptecs.jeaf.junit.openapi.base.BidirectB
     BidirectB:
       type: object
+      additionalProperties: false
       properties:
         a: 
           $ref: '#/components/schemas/BidirectA'
@@ -80,12 +82,14 @@ components:
         - a
     # com.anaptecs.jeaf.junit.openapi.base.CHStopPlace
     CHStopPlace:
+      type: object
+      additionalProperties: false
       allOf:
         - $ref: '#/components/schemas/StopPlaceRef'
-      type: object
     # com.anaptecs.jeaf.junit.openapi.base.Channel
     Channel:
       type: object
+      additionalProperties: false
       properties:
         channelType: 
           $ref: '#/components/schemas/ChannelType'
@@ -109,9 +113,10 @@ components:
         - selfServiceChannel
     # com.anaptecs.jeaf.junit.openapi.base.ChildA
     ChildA:
+      type: object
+      additionalProperties: false
       allOf:
         - $ref: '#/components/schemas/ParentClass'
-      type: object
       properties:
         childAAttribute: 
           type: integer
@@ -120,10 +125,11 @@ components:
         - childAAttribute
     # com.anaptecs.jeaf.junit.openapi.base.ChildAA
     ChildAA:
+      type: object
+      additionalProperties: false
       allOf:
         - $ref: '#/components/schemas/ChildA'
       deprecated: true
-      type: object
       properties:
         childAAAttribute: 
           type: integer
@@ -132,9 +138,10 @@ components:
         - childAAAttribute
     # com.anaptecs.jeaf.junit.openapi.base.ChildB
     ChildB:
+      type: object
+      additionalProperties: false
       allOf:
         - $ref: '#/components/schemas/ParentClass'
-      type: object
       properties:
         childBAttribute: 
           type: boolean
@@ -147,9 +154,10 @@ components:
         - childBAttribute
     # com.anaptecs.jeaf.junit.openapi.base.ChildBB
     ChildBB:
+      type: object
+      additionalProperties: false
       allOf:
         - $ref: '#/components/schemas/ChildB'
-      type: object
       properties:
         childBBAttribute: 
           type: integer
@@ -175,9 +183,10 @@ components:
         - deprecatedAttribute
     # com.anaptecs.jeaf.junit.openapi.base.Company
     Company:
+      type: object
+      additionalProperties: false
       allOf:
         - $ref: '#/components/schemas/Partner'
-      type: object
       properties:
         name: 
           type: string
@@ -186,6 +195,7 @@ components:
     # com.anaptecs.jeaf.junit.openapi.base.DateObject
     DateObject:
       type: object
+      additionalProperties: false
       properties:
         localTime: 
           type: string
@@ -215,12 +225,13 @@ components:
         - utilDate
     # com.anaptecs.jeaf.junit.openapi.base.Duration
     Duration:
+      type: object
+      additionalProperties: false
       description: >-
         Type represents a duration.
          
         NOVA 14 Mapping
         * nova-base.xsd.Dauer
-      type: object
       properties:
         value: 
           type: integer
@@ -233,6 +244,7 @@ components:
     # com.anaptecs.jeaf.junit.openapi.base.EnumTest
     EnumTest:
       type: object
+      additionalProperties: false
       properties:
         property: 
           $ref: '#/components/schemas/ExtensibleEnum'
@@ -243,9 +255,10 @@ components:
         - enumRef
     # com.anaptecs.jeaf.junit.openapi.base.GeoPosition
     GeoPosition:
+      type: object
+      additionalProperties: false
       allOf:
         - $ref: '#/components/schemas/PlaceRef'
-      type: object
       properties:
         longitude: 
           type: integer
@@ -259,6 +272,7 @@ components:
     # com.anaptecs.jeaf.junit.openapi.base.Leg
     Leg:
       type: object
+      additionalProperties: false
       properties:
         start: 
           $ref: '#/components/schemas/PlaceRef'
@@ -274,12 +288,13 @@ components:
         - stop
     # com.anaptecs.jeaf.junit.openapi.base.MoneyAmount
     MoneyAmount:
+      type: object
+      additionalProperties: false
       description: >-
         Type represents an amount of money.
                
         NOVA 14 Mapping
         * nova-base.xsd.GeldBetrag
-      type: object
       properties:
         amount: 
           description: >-
@@ -302,6 +317,7 @@ components:
     # com.anaptecs.jeaf.junit.openapi.base.OpenAPITestObject
     OpenAPITestObject:
       type: object
+      additionalProperties: false
       properties:
         readOnlyAttribute: 
           type: string
@@ -347,6 +363,8 @@ components:
         - notNullableArray
     # com.anaptecs.jeaf.junit.openapi.base.ParentClass
     ParentClass:
+      type: object
+      additionalProperties: false
       discriminator:
         propertyName: objectType
         mapping:
@@ -355,7 +373,6 @@ components:
           ChildAA: '#/components/schemas/ChildAA'
           ChildB: '#/components/schemas/ChildB'
           ChildBB: '#/components/schemas/ChildBB'
-      type: object
       properties:
         objectType:
           description: Attribute is used as discriminator for inheritance between data types.
@@ -367,13 +384,14 @@ components:
         - parentAttribute
     # com.anaptecs.jeaf.junit.openapi.base.Partner
     Partner:
+      type: object
+      additionalProperties: false
       discriminator:
         propertyName: objectType
         mapping:
           Partner: '#/components/schemas/Partner'
           Company: '#/components/schemas/Company'
           Person: '#/components/schemas/Person'
-      type: object
       properties:
         objectType:
           description: Attribute is used as discriminator for inheritance between data types.
@@ -388,6 +406,7 @@ components:
     # com.anaptecs.jeaf.junit.openapi.base.PartnerContainer
     PartnerContainer:
       type: object
+      additionalProperties: false
       properties:
         partners: 
           type: array
@@ -396,9 +415,10 @@ components:
           minItems: 0
     # com.anaptecs.jeaf.junit.openapi.base.Person
     Person:
+      type: object
+      additionalProperties: false
       allOf:
         - $ref: '#/components/schemas/Partner'
-      type: object
       properties:
         surname: 
           type: string
@@ -409,6 +429,8 @@ components:
         - firstName
     # com.anaptecs.jeaf.junit.openapi.base.PlaceRef
     PlaceRef:
+      type: object
+      additionalProperties: false
       discriminator:
         propertyName: objectType
         mapping:
@@ -419,7 +441,6 @@ components:
           SwissGeoPosition: '#/components/schemas/SwissGeoPosition'
           TopoRef: '#/components/schemas/TopoRef'
           UICStopPlace: '#/components/schemas/UICStopPlace'
-      type: object
       properties:
         objectType:
           description: Attribute is used as discriminator for inheritance between data types.
@@ -432,6 +453,7 @@ components:
     # com.anaptecs.jeaf.junit.openapi.base.PostalAddress
     PostalAddress:
       type: object
+      additionalProperties: false
       properties:
         street: 
           type: string
@@ -450,6 +472,7 @@ components:
     # com.anaptecs.jeaf.junit.openapi.base.PrimitiveArraysObject
     PrimitiveArraysObject:
       type: object
+      additionalProperties: false
       properties:
         aBooleanArray: 
           type: array
@@ -560,6 +583,7 @@ components:
     # com.anaptecs.jeaf.junit.openapi.base.PrimitiveArraysObjectWithRestrictions
     PrimitiveArraysObjectWithRestrictions:
       type: object
+      additionalProperties: false
       properties:
         aBooleanArray: 
           type: array
@@ -668,6 +692,7 @@ components:
     # com.anaptecs.jeaf.junit.openapi.base.PrimitiveObject
     PrimitiveObject:
       type: object
+      additionalProperties: false
       properties:
         aBoolean: 
           type: boolean
@@ -754,6 +779,7 @@ components:
     # com.anaptecs.jeaf.junit.openapi.base.PrimitiveObjectWithRestrictions
     PrimitiveObjectWithRestrictions:
       type: object
+      additionalProperties: false
       properties:
         aBoolean: 
           type: boolean
@@ -865,6 +891,7 @@ components:
     # com.anaptecs.jeaf.junit.openapi.base.Problem
     Problem:
       type: object
+      additionalProperties: false
       properties:
         title: 
           type: string
@@ -893,9 +920,10 @@ components:
         - instance
     # com.anaptecs.jeaf.junit.openapi.base.Product
     Product:
+      type: object
+      additionalProperties: false
       description: >-
         Data type represents a product definition
-      type: object
       properties:
         resellers: 
           type: array
@@ -949,6 +977,7 @@ components:
     # com.anaptecs.jeaf.junit.openapi.base.Reseller
     Reseller:
       type: object
+      additionalProperties: false
       properties:
         channels: 
           type: array
@@ -968,6 +997,7 @@ components:
     # com.anaptecs.jeaf.junit.openapi.base.Sortiment
     Sortiment:
       type: object
+      additionalProperties: false
       properties:
         products: 
           type: array
@@ -976,24 +1006,28 @@ components:
           minItems: 0
     # com.anaptecs.jeaf.junit.openapi.base.StopPlaceRef
     StopPlaceRef:
+      type: object
+      additionalProperties: false
       allOf:
         - $ref: '#/components/schemas/PlaceRef'
-      type: object
     # com.anaptecs.jeaf.junit.openapi.base.SwissGeoPosition
     SwissGeoPosition:
+      type: object
+      additionalProperties: false
       allOf:
         - $ref: '#/components/schemas/GeoPosition'
-      type: object
     # com.anaptecs.jeaf.junit.openapi.base.TopoRef
     TopoRef:
+      type: object
+      additionalProperties: false
       allOf:
         - $ref: '#/components/schemas/PlaceRef'
-      type: object
     # com.anaptecs.jeaf.junit.openapi.base.UICStopPlace
     UICStopPlace:
+      type: object
+      additionalProperties: false
       allOf:
         - $ref: '#/components/schemas/StopPlaceRef'
-      type: object
 
     
     # com.anaptecs.jeaf.junit.openapi.base.ChannelType
