--- a/jeaf-generator-test-open-api/src-gen/main/resources/products/product-services.yml
+++ b/jeaf-generator-test-open-api/src-gen/main/resources/products/product-services.yml
@@ -567,6 +567,29 @@ paths:
           $ref: '#/components/responses/CustomErrorResponse'
         'default':
           $ref: '#/components/responses/CustomErrorResponse'
+  /products/codeTypeUsages:
+    post:
+      operationId: testCodeTypeUsage
+      requestBody:
+        description: >- 
+          TODO Please add comment
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '../base/product-base.yml#/components/schemas/StringCodeType'
+      responses:
+        '200':
+          description: >- 
+            TODO Please add comment
+          content:  
+            application/json:
+              schema:
+                $ref: '../base/product-base.yml#/components/schemas/IntegerCodeType'
+        '400':
+          $ref: '#/components/responses/CustomErrorResponse'
+        'default':
+          $ref: '#/components/responses/CustomErrorResponse'
 
 
 security:
